hphp/test/slow/parser/php-reserved-name-void-1.php.expectf
Fatal error: Cannot use 'Void' as class name as it is reserved in %s/hphp/test/slow/parser/php-reserved-name-void-1.php on line 6